# newsletter

./: .env.example  .gitignore  Cargo.toml  Dockerfile
migrations/: 20240824163138_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
